force-app/main/default/objects/Inventory_Item__c/Inventory_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Item</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Inventory Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Itens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>