force-app/main/default/objects/Inventory_Item__c/fields/InventoryRecord__c.field-meta.xml
<CustomField>
    <fullName>InventoryRecord__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Record</label>
    <type>Text</type>
</CustomField>